# src/routes/imageRoutes.js
@@ -4,9 +4,11 @@ const express = require('express');
 const router = express.Router();
 const {getImage, uploadImage, editImage,upload } = require('../controllers/imageController');
 
-router.post('/api/upload/:userId',upload.single('file'), uploadImage);
-router.put('/api/update/:userId', authenticateToken, upload.single('image'), editImage);
-router.get('/api/image/:userId',getImage);
+router.post('/api/upload',upload.single('file'), uploadImage);
+
+router.put('/api/update/:userId',  upload.single('file'), editImage);
+
+router.get('/api/get/image/:userId',getImage);
 module.exports = router;
 
  
